@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
-designation
}


class Containers {
-x
-y
-z
-containerNumber
-checkDigit
-isoCode
-width
-height
-length
-payLoad
-tare
-gross
}

class Ship {
-mmsiCode
-name
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-vesselType
-length
-width
-capacity
-draft
}

class CargoManifest {
-containerNumber
}



class Ports {
-identification
-name
}

class Truck {

}
class Employee {
-name
}

class Warehouse {
-identification
-name
}

class Country {
-name
-continent
}

class PlaceLocation {
-latitude
-longitude
}

class ShipPosition {
-baseDateTime
-latitude
-longitude
-sog
-cog
-heading
-position
-transceiver
}

CargoManifest "*" --- "1..*" Ports : deliver >
CargoManifest "*" --- "1..*" Warehouse : deliver >


Company "1"--"1..*" Employee: has >
Company "1"--"1..*" Truck: has >
Company "1"--"1..*" Ship: has >

Containers "0..*"---"1" Ports: store >
Containers "1..*"---"1..*" CargoManifest: relate >
Containers "0..*"---"1" Warehouse: store >



Ports "1" --- "1" PlaceLocation : located at >
PlaceLocation "*" --- "1" Country : placed >



Employee "1" --- "1..*" ShipPosition : control >

Ship "1"---"1..*" Containers : transport >
Ship "1" --- "1..*" ShipPosition : has >
Ship "0..*"---"1" Ports: anchor in>

Ship "1"---"1..*" CargoManifest: have in>



Truck "0..*"---"1" Warehouse: park in >
Truck "1"---"1..*" Containers : transport >

Warehouse "1" --- "1" PlaceLocation : located at >
@enduml